Change url to uri (#9)